--- a/main.yml
+++ b/main.yml
@@ -182,6 +182,21 @@ Resources:
         - Key: Name
           Value: !Ref AWS::StackName
 
+  PipelineWebhook:
+    Type: AWS::CodePipeline::Webhook
+    Properties:
+      Authentication: GITHUB_HMAC
+      AuthenticationConfiguration:
+      SecretToken: !Ref GitHubPersonalAccessToken
+      Filters:
+      - JsonPath: $.ref
+      MatchEquals: 'refs/heads/{Branch}'
+      TargetPipeline: !Ref Pipeline
+      TargetAction: Source
+      Name: !Sub 'webhook-${AWS::StackName}'
+      TargetPipelineVersion: !GetAtt Pipeline.Version
+      RegisterWithThirdParty: true
+
   Pipeline:
     Type: AWS::CodePipeline::Pipeline
     Properties:
